# Deposit

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  wait-for-it.sh
deposit/: manage.py
deposit/deposit/: asgi.py  settings.py  urls.py  wsgi.py
deposit/deposit_calculator/: apps.py  models.py  serializers.py  urls.py  validators.py  views.py
deposit/deposit_calculator/migrations/: 0001_initial.py  0002_deposit_calculated_value.py
deposit/deposit_calculator/tests/: test_api.py
