[tool.poetry]
name = "deposit"
version = "0.1.0"
description = ""
authors = ["Aleksandr <ShirshovAleksandrWA@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
